force-app/main/default/objects/Book__c/fields/Book_Summary__c.field-meta.xml
<CustomField>
    <fullName>Book_Summary__c</fullName>
    <description>Description of the book&apos;s contents</description>
    <inlineHelpText>Summary of Book Contents</inlineHelpText>
    <label>Book_Summary</label>
    <type>TextArea</type>
</CustomField>