force-app/main/default/objects/Book__c/fields/Book_URL__c.field-meta.xml
<CustomField>
    <fullName>Book_URL__c</fullName>
    <description>A link to the book&apos;s website, where to buy the book, or maybe a page describing the book. Whatever you feel like using for the book&apos;s URL.</description>
    <inlineHelpText>URL to External Website for Book</inlineHelpText>
    <label>Book_URL</label>
    <type>Url</type>
</CustomField>