force-app/main/default/objects/Book__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether or not you have complete reading this book</description>
    <inlineHelpText>Finished Reading This Book?</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>