force-app/main/default/objects/Book__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>A URL to an image of the book for display purposes</description>
    <inlineHelpText>URL to Book Image for Display Purposes</inlineHelpText>
    <label>Image</label>
    <type>Url</type>
</CustomField>