force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>Book&apos;s ISBN number</description>
    <label>ISBN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>