force-app/main/default/objects/Book__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>Date the book was published</description>
    <label>Published_Date</label>
    <type>Date</type>
</CustomField>