force-app/main/default/objects/Book__c/recordTypes/All_Users.recordType-meta.xml
<RecordType>
    <fullName>All_Users</fullName>
    <active>true</active>
    <label>All Users</label>
</RecordType>